fixed where iframe should end

--- a/index.Rmd
+++ b/index.Rmd
@@ -411,5 +411,5 @@ In the next chapter, we will dig in and spend more time learning how to load spr
 
 
 <script>
-  iFrameResize({}, ".interactive");
+  iFrameResize({heightCalculationMethod:'taggedElement'}, ".interactive");
 </script>
