done v1 of data retrieval notebook, mauna loa section

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -75,16 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This function takes in a string and outputs its SHA1 hash\n",
     "def hash_data(data):\n",
     "    data_bytes = data.encode()\n",
     "    sha1 = hashlib.sha1()\n",
     "    sha1.update(data_bytes)\n",
     "    return sha1.hexdigest()\n",
     "\n",
+    "# This function takes in new/stored data strings, a hash to compare, and a filename to store data in\n",
+    "# If the new/stored data have a matching hash with compare_hash, just return the data\n",
+    "# If the stored one matches but new one doesn't, output a message with instructions on how to update the data and continue with old data\n",
+    "# If the new one matches but the stored one doesn't, just overwrite the stored data\n",
     "def validate_data(new_data, stored_data, compare_hash, stored_filename):\n",
     "    print('Validating new/stored data')\n",
     "    new_hash = hash_data(new_data)\n",
@@ -94,30 +99,43 @@
     "    print('Stored data hash: ' + stored_hash)\n",
     "    new_valid = (hash_data(new_data) == compare_hash)\n",
     "    stored_valid = (hash_data(stored_data) == compare_hash)\n",
+    "    \n",
     "    data = None\n",
     "    if not new_valid:\n",
-    "        print('The newly obtained data hash is different from the stored hash')\n",
-    "        new_filename = stored_filename+'.new'\n",
-    "        f = open(new_filename, 'w')\n",
-    "        f.write(raw_data)\n",
-    "        f.close()\n",
-    "        print('New data was saved in ' + new_filename + '')\n",
-    "        print('If you want to use the new data, you must replace ' + stored_filename + ' with \\\n",
-    "               the contents of ' + new_filename + ' and update the hash in this notebook\\\n",
-    "               to ' + hash_data(new_data))\n",
+    "        print('The newly obtained data hash does not match')\n",
+    "        if len(new_data) == 0:\n",
+    "            print('The new data is empty, please check for errors in downloading')\n",
+    "        else:\n",
+    "            new_filename = stored_filename+'.new'\n",
+    "            f = open(new_filename, 'w')\n",
+    "            f.write(raw_data)\n",
+    "            f.close()\n",
+    "            print('New data was saved in ' + new_filename)\n",
+    "            print('If you want to use the new data, you must replace ' + stored_filename + ' with the contents of ' + new_filename + ' and update the hash in this notebook to ' + new_hash)\n",
+    "        \n",
     "        if stored_valid:\n",
     "            print('Stored data hash matches; continuing with stored data.')\n",
     "            data = stored_data\n",
     "        else:\n",
-    "            print('Stored data hash is also different from stored hash.')\n",
-    "            print('Please follow the above directions and update the hash in this notebook to '+ hash_data(raw_data))\n",
+    "            print('Stored data hash also does not match.')\n",
+    "            print('Please follow the above directions and update the hash in this notebook')\n",
     "    else:\n",
     "        print('Newly obtained data hash matches.')\n",
     "        if not stored_valid:\n",
-    "            print('Stored data hash does not match; replacing stored data with newly obtained data')\n",
+    "            print('Stored data hash does not match')\n",
+    "            if len(stored_data) == 0:\n",
+    "                print('Stored data is empty')\n",
+    "            else:\n",
+    "                old_filename = stored_filename+'.old'\n",
+    "                f = open(old_filename, 'w')\n",
+    "                f.write(stored_data)\n",
+    "                f.close()\n",
+    "                print('Moved stored data to ' + old_filename)\n",
+    "                print('If you want to use the old data, you must replace ' + stored_filename + ' with the contents of ' + new_filename + ' and update the hash in this notebook to ' + stored_hash)\n",
     "            f = open(stored_filename, 'w')\n",
     "            f.write(new_data)\n",
     "            f.close()\n",
+    "            print('Saved new data to ' + stored_filename)\n",
     "        else:\n",
     "            print('Stored data hash matches too.')\n",
     "        print('Continuing with new data')\n",
@@ -238,14 +256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading mauna_loa_raw.txt\n"
+      "Loading mauna_loa_raw.txt\n",
+      "Exception while loading mauna_loa_raw.txt\n",
+      "[Errno 2] No such file or directory: 'mauna_loa_raw.txt'\n"
      ]
     }
    ],
@@ -258,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -268,9 +288,11 @@
       "Validating new/stored data\n",
       "Comparison hash:  464aa24fcd8cdb051d92361da956be3d3a2818eb\n",
       "New data hash:    464aa24fcd8cdb051d92361da956be3d3a2818eb\n",
-      "Stored data hash: 464aa24fcd8cdb051d92361da956be3d3a2818eb\n",
+      "Stored data hash: da39a3ee5e6b4b0d3255bfef95601890afd80709\n",
       "Newly obtained data hash matches.\n",
-      "Stored data hash matches too.\n",
+      "Stored data hash does not match\n",
+      "Stored data is empty\n",
+      "Saved new data to mauna_loa_raw.txt\n",
       "Continuing with new data\n"
      ]
     }
@@ -290,14 +312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading mauna_loa.csv\n"
+      "Loading mauna_loa.csv\n",
+      "Exception while loading mauna_loa.csv\n",
+      "[Errno 2] No such file or directory: 'mauna_loa.csv'\n"
      ]
     }
    ],
@@ -316,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -326,9 +350,11 @@
       "Validating new/stored data\n",
       "Comparison hash:  033baea66bf56351ad858e10ed7996c6ac7b9aa7\n",
       "New data hash:    033baea66bf56351ad858e10ed7996c6ac7b9aa7\n",
-      "Stored data hash: 033baea66bf56351ad858e10ed7996c6ac7b9aa7\n",
+      "Stored data hash: da39a3ee5e6b4b0d3255bfef95601890afd80709\n",
       "Newly obtained data hash matches.\n",
-      "Stored data hash matches too.\n",
+      "Stored data hash does not match\n",
+      "Stored data is empty\n",
+      "Saved new data to mauna_loa.csv\n",
       "Continuing with new data\n"
      ]
     }
@@ -373,13 +399,6 @@
    "source": [
     "# Income and Housing Data"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
