Minor ed to data retrieval nb

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -194,6 +194,7 @@
     "- **Data URL:** ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_weekly_mlo.txt\n",
     "- **Date Accessed:** July 4, 2020\n",
     "- **Attribution:** Dr. Pieter Tans, [NOAA/GML](www.esrl.noaa.gov/gmd/ccgg/trends/) and Dr. Ralph Keeling, [Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/).\n",
+    "- **Where Used:** Chapters X, Y, Z\n",
     "- **License:** Custom:\n",
     "\n",
     "\n",
