wdbc and islands data retrieval codified

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -28,20 +28,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding New Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When adding a new data source to the textbook, it should be appended to the end of this notebook with a consistent notebook cell formatting / arrangement. The best way to do this is to copy and paste a block of cells for one of the examples below and then replace the information."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Load Packages"
    ]
   },
@@ -54,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,10 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "datasets = {}\n",
+    "\n",
     "# This function takes in a string and outputs its SHA1 hash\n",
     "def hash_data(data):\n",
     "    data_bytes = data.encode()\n",
@@ -108,7 +96,7 @@
     "        else:\n",
     "            new_filename = stored_filename+'.new'\n",
     "            f = open(new_filename, 'w')\n",
-    "            f.write(raw_data)\n",
+    "            f.write(new_data)\n",
     "            f.close()\n",
     "            print('New data was saved in ' + new_filename)\n",
     "            print('If you want to use the new data, you must replace ' + stored_filename + ' with the contents of ' + new_filename + ' and update the hash in this notebook to ' + new_hash)\n",
@@ -169,7 +157,9 @@
     "        print(e)\n",
     "    \n",
     "    return raw_data\n",
-    "    \n"
+    "\n",
+    "def download_http(url):\n",
+    "    return requests.get(url).content.decode('utf-8')    \n"
    ]
   },
   {
@@ -252,118 +242,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Obtain / validate data"
+    "## Processing Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading mauna_loa_raw.txt\n",
-      "Exception while loading mauna_loa_raw.txt\n",
-      "[Errno 2] No such file or directory: 'mauna_loa_raw.txt'\n"
+      "Downloading co2_weekly_mlo.txt from aftp.cmdl.noaa.gov\n",
+      "Loading mauna_loa_raw.txt\n"
      ]
     }
    ],
    "source": [
-    "#download data from source, load it from storage\n",
-    "new_data = ftp_download('aftp.cmdl.noaa.gov', 'products/trends/co2/', 'co2_weekly_mlo.txt')\n",
-    "stored_filename = 'mauna_loa_raw.txt'\n",
-    "stored_data = load_file(stored_filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validating new/stored data\n",
-      "Comparison hash:  464aa24fcd8cdb051d92361da956be3d3a2818eb\n",
-      "New data hash:    464aa24fcd8cdb051d92361da956be3d3a2818eb\n",
-      "Stored data hash: da39a3ee5e6b4b0d3255bfef95601890afd80709\n",
-      "Newly obtained data hash matches.\n",
-      "Stored data hash does not match\n",
-      "Stored data is empty\n",
-      "Saved new data to mauna_loa_raw.txt\n",
-      "Continuing with new data\n"
-     ]
-    }
-   ],
-   "source": [
-    "#validate both newly downloaded and stored data\n",
-    "compare_hash = '464aa24fcd8cdb051d92361da956be3d3a2818eb'\n",
-    "data = validate_data(new_data, stored_data, compare_hash, stored_filename)"
+    "def obtain_mauna_loa():\n",
+    "    return download_ftp('aftp.cmdl.noaa.gov', 'products/trends/co2/', 'co2_weekly_mlo.txt')\n",
+    "\n",
+    "def process_mauna_loa(data):\n",
+    "    # remove the lines beginning with # (these are for meta information)\n",
+    "    no_meta_info = [s for s in data.split('\\n') if s[0] != '#']\n",
+    "    # replace all whitespace with a single space, strip from beginning and end, keep only first 5 cols\n",
+    "    standardized_whitespace = [', '.join([num for num in s.strip().split(' ') if len(num)>0][:5]) for s in no_meta_info]\n",
+    "    # stitch together into a string with col names at the head\n",
+    "    clean_data = 'year, month, day, date_decimal, ppm\\n'+'\\n'.join(standardized_whitespace)\n",
+    "    return clean_data\n",
+    "\n",
+    "datasets['mauna_loa'] = {}\n",
+    "datasets['mauna_loa']['compare_hash_raw'] = '464aa24fcd8cdb051d92361da956be3d3a2818eb'\n",
+    "datasets['mauna_loa']['compare_hash_clean'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
+    "datasets['mauna_loa']['obtain_data'] = obtain_mauna_loa\n",
+    "datasets['mauna_loa']['clean_data'] = process_mauna_loa\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocess data"
+    "# Wisconsin Breast Cancer Data"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 143,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading mauna_loa.csv\n",
-      "Exception while loading mauna_loa.csv\n",
-      "[Errno 2] No such file or directory: 'mauna_loa.csv'\n"
-     ]
-    }
-   ],
    "source": [
-    "# remove the lines beginning with # (these are for meta information)\n",
-    "no_meta_info = [s for s in data.split('\\n') if s[0] != '#']\n",
-    "# replace all whitespace with a single space, strip from beginning and end, keep only first 5 cols\n",
-    "standardized_whitespace = [', '.join([num for num in s.strip().split(' ') if len(num)>0][:5]) for s in no_meta_info]\n",
-    "# stitch together into a string with col names at the head\n",
-    "clean_data = 'year, month, day, date_decimal, ppm\\n'+'\\n'.join(standardized_whitespace)\n",
+    "## Meta-info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Source:** [The UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic)) \n",
+    "- **Date Accessed:** July 4, 2020\n",
+    "- **Where Used:** Chapters X, Y, Z\n",
+    "- **License:** Custom:\n",
     "\n",
-    "#load previously processed data\n",
-    "stored_filename = 'mauna_loa.csv'\n",
-    "stored_clean_data = load_file(stored_filename)"
+    "- **Source:** [The UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic))\n",
+    "- **Data URL:**\n",
+    "    - Names: https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.names\n",
+    "    - Data: https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\n",
+    "- **Date Accessed:** July 5, 2020\n",
+    "- **Attribution:** Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian, University of Wisconsin.\n",
+    "- **Where Used:** Chapters X, Y, Z\n",
+    "- **License:** Custom:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Processing Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validating new/stored data\n",
-      "Comparison hash:  033baea66bf56351ad858e10ed7996c6ac7b9aa7\n",
-      "New data hash:    033baea66bf56351ad858e10ed7996c6ac7b9aa7\n",
-      "Stored data hash: da39a3ee5e6b4b0d3255bfef95601890afd80709\n",
-      "Newly obtained data hash matches.\n",
-      "Stored data hash does not match\n",
-      "Stored data is empty\n",
-      "Saved new data to mauna_loa.csv\n",
-      "Continuing with new data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#validate the preprocessed data\n",
-    "compare_hash = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
-    "data = validate_data(clean_data, stored_clean_data, compare_hash, stored_filename)"
+    "def obtain_wdbc():\n",
+    "    data = download_http('https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data')\n",
+    "    return data\n",
+    "\n",
+    "def process_wdbc(data):\n",
+    "    #create list of variable names\n",
+    "    names = ['Class', 'Radius', 'Texture', 'Perimeter', 'Area', 'Smoothness', 'Compactness', 'Concavity', 'Concave Points', 'Symmetry', 'Fractal Dimension']\n",
+    "    #remove all but the class label (B/M) and first 10 entries (means of each value)\n",
+    "    data_lines = [line.split(',')[1:12] for line in data.split('\\n')]\n",
+    "    clean_data = ','.join(names) + '\\n' + '\\n'.join([','.join(line) for line in data_lines])\n",
+    "    return clean_data\n",
+    "    \n",
+    "\n",
+    "datasets['wdbc'] = {}\n",
+    "datasets['wdbc']['compare_hash_raw'] = '464aa24fcd8cdb051d92361da956be3d3a2818eb'\n",
+    "datasets['wdbc']['compare_hash_clean'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
+    "datasets['wdbc']['obtain_data'] = obtain_wdbc\n",
+    "datasets['wdbc']['clean_data'] = process_wdbc"
    ]
   },
   {
@@ -377,14 +356,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Historical Vote Data"
+    "## Meta-info"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wisconsin Breast Cancer Data"
+    "- **Source:** The World Almanac and Book of Facts, 1975, page 406. See https://stat.ethz.ch/R-manual/R-patched/library/datasets/html/islands.html \n",
+    "- **Date Accessed:** July 4, 2020\n",
+    "- **Where Used:** Chapters X, Y, Z\n",
+    "- **License:** Custom:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Processing Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def obtain_islands():\n",
+    "    return load_file('islands_raw.txt')\n",
+    "\n",
+    "def process_islands(data):\n",
+    "    return data\n",
+    "\n",
+    "datasets['islands'] = {}\n",
+    "datasets['islands']['compare_hash_raw'] = '464aa24fcd8cdb051d92361da956be3d3a2818eb'\n",
+    "datasets['islands']['compare_hash_clean'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
+    "datasets['islands']['obtain_data'] = None\n",
+    "datasets['islands']['clean_data'] = None\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Historical Vote Data"
    ]
   },
   {
