--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -28,6 +28,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## List of Datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| **Name** | **Chapters**| **R Dataset** | **Remote Database** |\n",
+    "| -------- | ----------- | ----------- | ---------------- |\n",
+    "| US 2016 Census/Vote Data | 1, 2, 3 | N | N |\n",
+    "| Canadian Movies | 2 | N | Y |\n",
+    "| Historical US Vote | 3 | N | N |\n",
+    "| mtcars | 3 | Y| N |\n",
+    "| Mauna Loa CO2 | 4 | N | N |\n",
+    "| Islands | 4 | Y | N |\n",
+    "| Old Faithful | 4 | Y | N |\n",
+    "| Speed of Light | 4 | Y | N |\n",
+    "| Wisconsin Breast Cancer | 6, 7 | N | N |\n",
+    "| Sacramento Real Estate | 8, 9 | Y | N | \n",
+    "| Marketing Data | 10 | N | N |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load Packages"
    ]
   },
@@ -40,16 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tqdm              #for progress bars\n",
     "import numpy as np       #for manipulating arrays\n",
     "import pandas as pd      #for loading/writing/manipulating tabular data\n",
     "import requests, ftplib  #for downloading files\n",
     "import os                #for handling files\n",
-    "import hashlib           #for validating files"
+    "import hashlib           #for validating files\n",
+    "import io                #for creating byte streams for xlsx files"
    ]
   },
   {
@@ -61,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,10 +287,8 @@
     }
    ],
    "source": [
-    "def obtain_mauna_loa():\n",
-    "    return download_ftp('aftp.cmdl.noaa.gov', 'products/trends/co2/', 'co2_weekly_mlo.txt')\n",
-    "\n",
-    "def process_mauna_loa(data):\n",
+    "def retrieve_mauna_loa(data):\n",
+    "    data = download_ftp('aftp.cmdl.noaa.gov', 'products/trends/co2/', 'co2_weekly_mlo.txt')\n",
     "    # remove the lines beginning with # (these are for meta information)\n",
     "    no_meta_info = [s for s in data.split('\\n') if s[0] != '#']\n",
     "    # replace all whitespace with a single space, strip from beginning and end, keep only first 5 cols\n",
@@ -273,10 +298,8 @@
     "    return clean_data\n",
     "\n",
     "datasets['mauna_loa'] = {}\n",
-    "datasets['mauna_loa']['compare_hash_raw'] = '464aa24fcd8cdb051d92361da956be3d3a2818eb'\n",
-    "datasets['mauna_loa']['compare_hash_clean'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
-    "datasets['mauna_loa']['obtain_data'] = obtain_mauna_loa\n",
-    "datasets['mauna_loa']['clean_data'] = process_mauna_loa\n"
+    "datasets['mauna_loa']['compare_hash'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
+    "datasets['mauna_loa']['retrieve_data'] = retrieve_mauna_loa\n"
    ]
   },
   {
@@ -325,11 +348,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def obtain_wdbc():\n",
+    "def retrieve_wdbc(data):\n",
     "    data = download_http('https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data')\n",
-    "    return data\n",
-    "\n",
-    "def process_wdbc(data):\n",
     "    #create list of variable names\n",
     "    names = ['Class', 'Radius', 'Texture', 'Perimeter', 'Area', 'Smoothness', 'Compactness', 'Concavity', 'Concave Points', 'Symmetry', 'Fractal Dimension']\n",
     "    #remove all but the class label (B/M) and first 10 entries (means of each value)\n",
@@ -339,10 +359,8 @@
     "    \n",
     "\n",
     "datasets['wdbc'] = {}\n",
-    "datasets['wdbc']['compare_hash_raw'] = '464aa24fcd8cdb051d92361da956be3d3a2818eb'\n",
-    "datasets['wdbc']['compare_hash_clean'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
-    "datasets['wdbc']['obtain_data'] = obtain_wdbc\n",
-    "datasets['wdbc']['clean_data'] = process_wdbc"
+    "datasets['wdbc']['compare_hash'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
+    "datasets['wdbc']['retrieve_data'] = retrieve_wdbc"
    ]
   },
   {
@@ -382,38 +400,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def obtain_islands():\n",
+    "def retrieve_islands():\n",
     "    return load_file('islands_raw.txt')\n",
     "\n",
-    "def process_islands(data):\n",
-    "    return data\n",
-    "\n",
     "datasets['islands'] = {}\n",
-    "datasets['islands']['compare_hash_raw'] = '464aa24fcd8cdb051d92361da956be3d3a2818eb'\n",
-    "datasets['islands']['compare_hash_clean'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
-    "datasets['islands']['obtain_data'] = None\n",
-    "datasets['islands']['clean_data'] = None\n"
+    "datasets['islands']['compare_hash'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
+    "datasets['islands']['retrieve_data'] = None\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Historical Vote Data"
+    "# US 2016 Census / Vote Data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# State Property Vote Data"
+    "## Meta-info"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Income and Housing Data"
+    "## Processing Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_state_property_vote():\n",
+    "    #add a user agent header so that the API doesn't return 403\n",
+    "    useragent = {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.102 Safari/537.36'}\n",
+    "    #create the query URL\n",
+    "    state_data_url = \"http://datausa.io/api/data?drilldowns=State&measure=Average Commute Time,Property Value,Median Household Income,Population&year=2016\"\n",
+    "    state_data = requests.get(state_data_url, headers=useragent).json()['data']\n",
+    "    #convert to a list of lists, removing DC, Puerto Rico\n",
+    "    #format numerical entries as either a 2-decimal float or integer\n",
+    "    colnames = ['State', 'Population', 'Property Value', 'Median Household Income', 'Average Commute Time']\n",
+    "    datalines = [[d[colname] if type(d[colname]) == str else format(d[colname], '.2f').rstrip('0').rstrip('.') for colname in colnames] for d in state_data if d['State'] != 'Puerto Rico' and d['State'] != 'District of Columbia']\n",
+    "    #obtain general presidential election 2016 results data\n",
+    "    elec_data_url = \"https://www.fec.gov/documents/1890/federalelections2016.xlsx\"\n",
+    "    stream = io.BytesIO(requests.get(elec_data_url).content)\n",
+    "    elec_data = pd.read_excel(stream,sheet_name=8)\n",
+    "    #extract one row per state with winner\n",
+    "    elec_data = elec_data[elec_data['WINNER INDICATOR'] == 'W']\n",
+    "    elec_dict = {}\n",
+    "    for i in range(elec_data.shape[0]):\n",
+    "        party = elec_data.iloc[i]['PARTY']\n",
+    "        #some rows assign the \"winner\" to combined parties; check the winner name for these rows\n",
+    "        #otherwise convert DEM/REP to long form names\n",
+    "        if party == 'Combined Parties:':\n",
+    "            if elec_data.iloc[i]['LAST NAME'] == 'Trump':\n",
+    "                party = 'Republican'\n",
+    "            else:\n",
+    "                party = 'Democratic'\n",
+    "        elif party == 'REP':\n",
+    "            party = 'Republican'\n",
+    "        elif party == 'DEM':\n",
+    "            party = 'Democratic'\n",
+    "        elec_dict[elec_data.iloc[i]['STATE']] = party\n",
+    "    #combine the two data\n",
+    "    data = [','.join(colnames+['Party'])]\n",
+    "    for line in datalines:\n",
+    "        data.append(','.join(line)+',' + elec_dict[line[0]])\n",
+    "    print('\\n'.join(data))\n",
+    "    \n",
+    "\n",
+    "datasets['state_property_vote'] = {}\n",
+    "datasets['state_property_vote']['compare_hash'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
+    "datasets['state_property_vote']['retrieve_data'] = retrieve_state_property_vote\n",
+    "        "
    ]
   }
  ],
