added capability to load r datasets in retrieve_data ntbk

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -67,16 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np       #for manipulating arrays\n",
-    "import pandas as pd      #for loading/writing/manipulating tabular data\n",
-    "import requests, ftplib  #for downloading files\n",
-    "import os                #for handling files\n",
-    "import hashlib           #for validating files\n",
-    "import io                #for creating byte streams for xlsx files"
+    "import numpy as np                #for manipulating arrays\n",
+    "import pandas as pd               #for loading/writing/manipulating tabular data\n",
+    "import requests, ftplib           #for downloading files\n",
+    "import os                         #for handling files\n",
+    "import hashlib                    #for validating files\n",
+    "import io                         #for creating byte streams for xlsx files\n",
+    "import rpy2.robjects as robjects  #for obtaining datasets included in R"
    ]
   },
   {
@@ -396,16 +397,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Island,Landmass\n",
+      "Africa,11506\n",
+      "Antarctica,5500\n",
+      "Asia,16988\n",
+      "Australia,2968\n",
+      "Axel Heiberg,16\n",
+      "Baffin,184\n",
+      "Banks,23\n",
+      "Borneo,280\n",
+      "Britain,84\n",
+      "Celebes,73\n",
+      "Celon,25\n",
+      "Cuba,43\n",
+      "Devon,21\n",
+      "Ellesmere,82\n",
+      "Europe,3745\n",
+      "Greenland,840\n",
+      "Hainan,13\n",
+      "Hispaniola,30\n",
+      "Hokkaido,30\n",
+      "Honshu,89\n",
+      "Iceland,40\n",
+      "Ireland,33\n",
+      "Java,49\n",
+      "Kyushu,14\n",
+      "Luzon,42\n",
+      "Madagascar,227\n",
+      "Melville,16\n",
+      "Mindanao,36\n",
+      "Moluccas,29\n",
+      "New Britain,15\n",
+      "New Guinea,306\n",
+      "New Zealand (N),44\n",
+      "New Zealand (S),58\n",
+      "Newfoundland,43\n",
+      "North America,9390\n",
+      "Novaya Zemlya,32\n",
+      "Prince of Wales,13\n",
+      "Sakhalin,29\n",
+      "South America,6795\n",
+      "Southampton,16\n",
+      "Spitsbergen,15\n",
+      "Sumatra,183\n",
+      "Taiwan,14\n",
+      "Tasmania,26\n",
+      "Tierra del Fuego,19\n",
+      "Timor,13\n",
+      "Vancouver,12\n",
+      "Victoria,82\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'datasets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-c18a7c1b7b0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mretrieve_islands\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'islands'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'islands'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'compare_hash'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'033baea66bf56351ad858e10ed7996c6ac7b9aa7'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'islands'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'retrieve_data'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'datasets' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def retrieve_islands():\n",
-    "    return load_file('islands_raw.txt')\n",
+    "    isl = robjects.r('islands')\n",
+    "    names = list(isl.names)\n",
+    "    vals = list(isl)\n",
+    "    data = 'Island,Landmass\\n'\n",
+    "    data = data + '\\n'.join([d[0]+','+str(int(d[1])) for d in zip(names, vals)])\n",
+    "    return data\n",
     "\n",
     "datasets['islands'] = {}\n",
     "datasets['islands']['compare_hash'] = '033baea66bf56351ad858e10ed7996c6ac7b9aa7'\n",
-    "datasets['islands']['retrieve_data'] = None\n"
+    "datasets['islands']['retrieve_data'] = retrieve_islands"
    ]
   },
   {
