added properly retrieved us vote data

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -67,74 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "R[write to console]: Loading required package: lattice\n",
-      "\n",
-      "R[write to console]: Loading required package: ggplot2\n",
-      "\n",
-      "R[write to console]: Use suppressPackageStartupMessages() to eliminate package startup\n",
-      "messages.\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <span>StrVector with 11 elements.</span>\n",
-       "        <table>\n",
-       "        <tbody>\n",
-       "          <tr>\n",
-       "          \n",
-       "            <td>\n",
-       "            'caret'\n",
-       "            </td>\n",
-       "          \n",
-       "            <td>\n",
-       "            'ggplot2'\n",
-       "            </td>\n",
-       "          \n",
-       "            <td>\n",
-       "            'lattice'\n",
-       "            </td>\n",
-       "          \n",
-       "            <td>\n",
-       "            ...\n",
-       "            </td>\n",
-       "          \n",
-       "            <td>\n",
-       "            'datasets'\n",
-       "            </td>\n",
-       "          \n",
-       "            <td>\n",
-       "            'methods'\n",
-       "            </td>\n",
-       "          \n",
-       "            <td>\n",
-       "            'base'\n",
-       "            </td>\n",
-       "          \n",
-       "          </tr>\n",
-       "        </tbody>\n",
-       "        </table>\n",
-       "        "
-      ],
-      "text/plain": [
-       "R object with classes: ('character',) mapped to:\n",
-       "['caret', 'ggplot2', 'lattice', 'tools', ..., 'utils', 'datasets', 'methods', 'base']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np                #for manipulating arrays\n",
     "import pandas as pd               #for loading/writing/manipulating tabular data\n",
@@ -143,7 +78,8 @@
     "import hashlib                    #for validating files\n",
     "import io                         #for creating byte streams for xlsx files\n",
     "import rpy2.robjects as robjects  #for obtaining datasets included in R\n",
-    "robjects.r('library(caret)')      #for the Sacramento dataset in R"
+    "robjects.r('library(caret)')      #for the Sacramento dataset in R\n",
+    "from bs4 import BeautifulSoup     #for scraping html\n"
    ]
   },
   {
@@ -155,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Source:** [DataUSA](https://datausa.io)\n",
+    "- **Source:** [DataUSA](https://datausa.io) and [Federal Election Commission](https://www.fec.gov)\n",
     "- **Data URL:**\n",
     "    - Census data: http://datausa.io/api/data?drilldowns=State&measure=Average%20Commute%20Time,Property%20Value,Median%20Household%20Income,Population&year=2016\n",
     "    - Election data: https://www.fec.gov/documents/1890/federalelections2016.xlsx\n",
@@ -247,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,12 +284,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Source:** [National Ocean and Atmospheric Administration (NOAA)](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html)\n",
-    "- **Data URL:** ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_weekly_mlo.txt\n",
-    "- **Date Accessed:** July 4, 2020\n",
-    "- **Attribution:** Dr. Pieter Tans, [NOAA/GML](www.esrl.noaa.gov/gmd/ccgg/trends/) and Dr. Ralph Keeling, [Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/).\n",
-    "- **License:**\n",
-    "\n"
+    "- **Source:** [Wikipedia](https://wikipedia.org)\n",
+    "- **Data URL:** https://en.wikipedia.org/wiki/List_of_United_States_presidential_elections_by_popular_vote_margin\n",
+    "- **Date Accessed:** July 6, 2020\n",
+    "- **License:** None"
    ]
   },
   {
@@ -361,6 +295,77 @@
    "metadata": {},
    "source": [
     "## Processing Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'datasets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-e00535a571cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m \u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'us_vote'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'us_vote'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'compare_hash'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'474fd20770e546b99982923697add9c44409feaf'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'us_vote'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'retrieve_data'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mretrieve_us_vote\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'datasets' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def retrieve_us_vote():\n",
+    "    #scrape the wiki HTML\n",
+    "    us_vote_url = 'https://en.wikipedia.org/wiki/List_of_United_States_presidential_elections_by_popular_vote_margin'\n",
+    "    us_vote_html = requests.get(us_vote_url).content\n",
+    "    soup = BeautifulSoup(us_vote_html, 'html.parser')\n",
+    "    tables = soup.find_all('table')\n",
+    "    data = ''\n",
+    "    for table in tables:\n",
+    "        #search for the actual election results table\n",
+    "        if 'wikitable' in table['class']:\n",
+    "            #create the column names synthetically, since the actual HTML table is organized with multiple col name levels\n",
+    "            colnames = ['election_num', 'election_year', 'winner', 'winner_party', 'elec_coll_votes_count',\n",
+    "                        'elec_coll_votes_tot','elec_coll_votes_perc', 'pop_votes_perc', 'pop_votes_perc_marg','pop_votes_count',\n",
+    "                        'pop_votes_count_marg','runner-up','runner-up_party','turnout']\n",
+    "            data += ','.join(colnames)+'\\n'\n",
+    "            #obtain the rows of the table\n",
+    "            list_rows = []\n",
+    "            table_rows = table.find_all('tr')   \n",
+    "            for i in range(3, len(table_rows)):\n",
+    "                #convert the entries to just plain text, remove tags\n",
+    "                entries = table_rows[i].find_all('td')\n",
+    "                entries_txt = [entry.text.strip() for entry in entries]\n",
+    "                #names are in the format Lastname,Firstname Lastname. Remove the redundant lastname\n",
+    "                entries_txt[2] = entries_txt[2].split(',')[1]\n",
+    "                entries_txt[10] = entries_txt[10].split(',')[1]\n",
+    "                #if this is the first election, the year is 1788-89. just replace the year with 1788\n",
+    "                if '-' in entries_txt[1]:\n",
+    "                    entries_txt[1] = entries_txt[1].split('-')[0]\n",
+    "                #there is one D.-R. party entry with [Note 1] -- remove that\n",
+    "                if entries_txt[11] == 'D.-R.[Note 1]':\n",
+    "                    entries_txt[11] = 'D.-R.'\n",
+    "                #remove commas and percent symbols\n",
+    "                for j in range(len(entries_txt)):\n",
+    "                    entries_txt[j] = entries_txt[j].replace(',','').replace('%','')\n",
+    "                #split the electoral college vote/total into two entries\n",
+    "                elecvotes = entries_txt[4].split('/')\n",
+    "                entries_txt[4] = elecvotes[0]\n",
+    "                entries_txt.insert(5, elecvotes[1])\n",
+    "                #add this row to the list\n",
+    "                list_rows.append(entries_txt)\n",
+    "            #sort the rows by first element\n",
+    "            list_rows = sorted(list_rows, key = lambda x : int(x[0]))\n",
+    "            #append to the data\n",
+    "            for row in list_rows:\n",
+    "                data += ','.join(row)+'\\n'\n",
+    "    return data\n",
+    "\n",
+    "datasets['us_vote'] = {}\n",
+    "datasets['us_vote']['compare_hash'] = '474fd20770e546b99982923697add9c44409feaf'\n",
+    "datasets['us_vote']['retrieve_data'] = retrieve_us_vote\n",
+    "\n"
    ]
   },
   {
@@ -381,11 +386,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Source:** [National Ocean and Atmospheric Administration (NOAA)](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html)\n",
-    "- **Data URL:** ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_weekly_mlo.txt\n",
+    "- **Source:** Base R dataset\n",
+    "- **Attribution:** Henderson and Velleman (1981), Building multiple regression models interactively. Biometrics, 37, 391–411. From the 1974 Motor Trends magazine. See https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/mtcars.html\n",
     "- **Date Accessed:** July 4, 2020\n",
-    "- **Attribution:** Dr. Pieter Tans, [NOAA/GML](www.esrl.noaa.gov/gmd/ccgg/trends/) and Dr. Ralph Keeling, [Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/).\n",
-    "- **License:**\n",
+    "- **License:** None\n",
     "\n"
    ]
   },
@@ -531,9 +535,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Source:** The World Almanac and Book of Facts, 1975, page 406. See https://stat.ethz.ch/R-manual/R-patched/library/datasets/html/islands.html \n",
+    "- **Source:** Base R dataset\n",
+    "- **Attribution:** The World Almanac and Book of Facts, 1975, page 406. See https://stat.ethz.ch/R-manual/R-patched/library/datasets/html/islands.html \n",
     "- **Date Accessed:** July 4, 2020\n",
-    "- **License:** Custom:\n"
+    "- **License:** None\n"
    ]
   },
   {
@@ -581,11 +586,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Source:** [National Ocean and Atmospheric Administration (NOAA)](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html)\n",
-    "- **Data URL:** ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_weekly_mlo.txt\n",
+    "- **Source:** Base R dataset\n",
+    "- **Attribution:** Azzalini, A. and Bowman, A. W. (1990). A look at some data on the Old Faithful geyser. Applied Statistics, 39, 357–365. doi: 10.2307/2347385. See https://stat.ethz.ch/R-manual/R-patched/library/datasets/html/faithful.html\n",
     "- **Date Accessed:** July 4, 2020\n",
-    "- **Attribution:** Dr. Pieter Tans, [NOAA/GML](www.esrl.noaa.gov/gmd/ccgg/trends/) and Dr. Ralph Keeling, [Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/).\n",
-    "- **License:**\n",
+    "- **License:** None\n",
     "\n"
    ]
   },
@@ -628,11 +632,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Source:** [National Ocean and Atmospheric Administration (NOAA)](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html)\n",
-    "- **Data URL:** ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_weekly_mlo.txt\n",
+    "- **Source:** Base R dataset\n",
+    "- **Attribution:** A. A. Michelson (1882) Experimental determination of the velocity of light made at the United States Naval Academy, Annapolis. Astronomic Papers 1 135–8. U.S. Nautical Almanac Office. (See Table 24.) See https://stat.ethz.ch/R-manual/R-patched/library/datasets/html/morley.html\n",
     "- **Date Accessed:** July 4, 2020\n",
-    "- **Attribution:** Dr. Pieter Tans, [NOAA/GML](www.esrl.noaa.gov/gmd/ccgg/trends/) and Dr. Ralph Keeling, [Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/).\n",
-    "- **License:**\n",
+    "- **License:** None\n",
     "\n"
    ]
   },
@@ -677,9 +680,9 @@
    "source": [
     "- **Source:** [The UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic))\n",
     "- **Data URL:** https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\n",
-    "- **Date Accessed:** July 5, 2020\n",
+    "- **Date Accessed:** July 4, 2020\n",
     "- **Attribution:** Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian, University of Wisconsin.\n",
-    "- **License:** Custom:\n"
+    "- **License:** None\n"
    ]
   },
   {
@@ -727,11 +730,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Source:** [The UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic))\n",
-    "- **Data URL:** https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\n",
+    "- **Source:** The [caret package](http://topepo.github.io/caret/index.html)\n",
+    "- **Attribution:** The Sacramento Bee. See http://topepo.github.io/caret/data-sets.html\n",
     "- **Date Accessed:** July 5, 2020\n",
-    "- **Attribution:** Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian, University of Wisconsin.\n",
-    "- **License:** Custom:\n"
+    "- **License:** None\n"
    ]
   },
   {
@@ -773,11 +775,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Source:** [The UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic))\n",
-    "- **Data URL:** https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\n",
-    "- **Date Accessed:** July 5, 2020\n",
-    "- **Attribution:** Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian, University of Wisconsin.\n",
-    "- **License:** Custom:\n"
+    "- **Source:** Synthetic, created by the authors. Inspired by https://www.segmentationstudyguide.com/using-cluster-analysis-for-market-segmentation/ .\n",
+    "- **Date Accessed:** July 4, 2020\n",
+    "- **License:** None\n"
    ]
   },
   {
